# barter-rs

./: .gitignore  Cargo.toml
barter-joshi/: Cargo.toml
barter-joshi/src/: black_scholes.rs  lib.rs  monte_carlo.rs  parameters.rs  path_dependent.rs  payoff.rs  random.rs  solvers.rs  statistics.rs  trees.rs
barter-python/: .gitignore  Cargo.toml  pyproject.toml
barter-python/python/barter/: __init__.py  joshi.py
barter-python/src/: account.rs  data.rs  decimal.rs  engine.rs  execution.rs  global.rs  instrument.rs  instrument_data.rs  lib.rs  order.rs  orderbook.rs  risk.rs  runtime.rs  state.rs  statistics.rs  strategy.rs
notebooks/: 01_instruments_and_market_data.ipynb  01_market_data_streaming.ipynb  02_engine_and_backtesting.ipynb  02_multi_exchange_streams.ipynb  03_trading_statistics.ipynb  04_engine_backtest.ipynb  04_instruments_and_market_data.ipynb  04_instruments_and_market_data_rust.ipynb  05_engine_and_backtesting.ipynb  05_engine_and_backtesting_rust.ipynb  05_instruments_and_indexing.ipynb  06_custom_strategies.ipynb  06_quantitative_finance_joshi.ipynb  07_python_bindings_roadmap.ipynb  07_risk_management.ipynb  08_websocket_integration.ipynb
notebooks/99_superseded/: 02_black_scholes_and_greeks.ipynb  03_trees_and_solvers.ipynb  04_path_dependent_options.ipynb
notebooks/99_superseded/.ipynb_checkpoints/: 01_payoffs_and_monte_carlo-checkpoint.ipynb  02_black_scholes_and_greeks-checkpoint.ipynb  03_trees_and_solvers-checkpoint.ipynb
notebooks/joshi/: 01_payoffs_and_monte_carlo.ipynb  01_payoffs_and_monte_carlo_rust.ipynb  02_black_scholes_and_greeks.ipynb  02_black_scholes_and_greeks_rust.ipynb  03_trees_and_solvers_rust.ipynb  04_path_dependent_options.ipynb  04_path_dependent_options_rust.ipynb
